[Web Payments] Properly constrain label width in order summary

BUG=711052

Review-Url: https://codereview.chromium.org/2829103002
Cr-Commit-Position: refs/heads/master@{#466671}

Former-commit-id: 29488693e08129987436199a7adf060b5a83d38f